<resources>
    <string name="app_name">Your Captain</string>
    <string name="field_req">Field required</string>
    <string name="login">Sign In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone Number</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="your_captain">Your Captain</string>
    <string name="hello">Hello!</string>
    <string name="we_help_women">- We help women to drive - \n in easy and flexible way in \n anytime</string>
    <string name="new_account_sign_up"><![CDATA[New Account? <font color="#3774d6">Sign Up</font>]]></string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="trainee">Trainee</string>
    <string name="or">OR</string>
    <string name="trainer">Trainer</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="national_id">National ID</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_already_have_account_sign_in">I already have account? Sign In</string>
    <string name="driver_license">Driver License</string>
    <string name="select">Select</string>
</resources>