<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/upload_image"
        android:textStyle="bold"


        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"

        >
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/camera"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray3"/>
        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/gallery"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray3"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/cancel"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>