<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_splash.SplashActivity"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/your_captain"
            />



        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".15"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/we_help_women"
            android:gravity="center"

            />

        <Button
            android:id="@+id/btnTrainee"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_primary"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHelp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".15"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/trainee"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTrainee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".05"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/or"
            />

        <Button
            android:id="@+id/btnTrainer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_primary"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/trainer"
            android:textAllCaps="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
