<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_trainee_sign_up.TraineeSignUpActivity"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_left_arrow"
                        android:padding="2dp"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/trainer"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_user"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_mail"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/email"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"
                        android:inputType="textEmailAddress"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_call"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/user_phone"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"
                        android:inputType="phone"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"

                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_lock"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"

                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        app:counterEnabled="false"
                        app:errorEnabled="false"
                        app:passwordToggleTint="@color/colorPrimaryDark"
                        app:passwordToggleEnabled="true"
                        app:helperTextEnabled="false"
                        app:hintEnabled="false"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:lines="1"
                            android:hint="@string/password"
                            android:textSize="14sp"
                            android:textColorHint="@color/gray4"
                            android:inputType="textPassword"
                            android:textColor="@color/black"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/date_of_birth"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/black"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_user_card"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/national_id"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/small_stroke_gray"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_user_card"
                        app:tint="@color/black"

                        />
                    <Space
                        android:layout_width="8dp"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:hint="@string/driver_license"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"

                        />


                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_camera"
                        app:tint="@color/black"

                        />

                </LinearLayout>


                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    >
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        app:riv_corner_radius="10dp"
                        app:riv_border_width="0dp"
                        app:riv_mutate_background="true"
                        android:background="@color/gray2"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/gray6"
                        android:textSize="9sp"
                        android:text="@string/upload_image"
                        tools:ignore="SmallSp" />
                </FrameLayout>
                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/sign_up"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/i_already_have_account_sign_in"
                    android:textColor="@color/blue_color"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
